Resolves: fdo#59246 shrink font to fit available width

Change-Id: I74cabfcbbfe24e598e497cf6eb451bd9ab517c44